# webassembly-demo

./: .gitignore  Cargo.toml  computeMax.js  fibonacci.html  fibonacci.js  fibonacci.wasm  index.html  index.js  lib.rs  max-array.html  max-array.js  max.wasm  maxValues.wasm  maxValues.wat  maxValuesCustom.wasm  memory-decompile.c  memory-decompile.h  memory.html  memory.wat  package.json  program.c  program.js  program.wasm  program.wat  test.wasm  testMaxValues.wat
demo/: index.html
demo/dx/: index.html  index.js  main.js  mult.rs
demo/import/: index.html  mult.c  mult.wasm
demo/mult/: index.html
demo/perf/: index.html  maxInArray.c
demo/styles/: main.css
docs/: index.html
docs/dx/: index.html  index.js  mult.rs  package.json
docs/fibonacci/: fibo.c  fibo.wasm  fibo.wat  index.html
docs/import/: index.html  mult.wat
docs/memory/: index.html  maxInArray.wasm  maxInArray.wat
docs/mult/: index.html  mult.c  mult.js  mult.wasm  mult.wat
docs/prism/: prism.css  prism.js
docs/styles/: main.css
